*Now the project images are better organized and scaled for the website *Added new images for NextCRM, PortalSPT, and UpTask projects
*Completed NotFound component for 404 error page
*Configured routing for 404 page in the main router file & added suspense for better loading experience
*Updated translations for German, English, and Spanish languages for the error page and other components

*Changed the dark mode background gradient of the test account info in project card to make it more visually appealing

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -90,5 +90,12 @@
 		"links-3": "Sonstiges",
 		"link-contact": "Kontakt",
 		"link-photography": "Fotografie"
-	}
+	}, 
+
+    "error": {
+        "header": "Seite nicht gefunden",
+        "message": "Entschuldigung, die Seite, die Sie suchen, existiert nicht :(",
+        "button-home": "Zurück zur Startseite",
+        "button-report": "Fehler melden"
+    }
 }
