--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -2,6 +2,7 @@
 	"nav": {
 		"home": "Startseite",
 		"projects": "Projekte",
+        "contact": "Kontact", 
 		"blog": "Blog",
 		"language": "Sprache ändern", 
         "spanish": "Spanien", 
@@ -19,6 +20,8 @@
 	"resume": {
 		"heading": "Meine Geschichte",
 		"heading-2": "Mein Studio",
+        "heading-web": "Webentwicklung",
+        "heading-devops": "DevOps",
 		"p-1": "Ich programmiere seit 2 Jahren, angefangen mit Online-Kursen über den Bau einfacher Webseiten mit HTML, CSS, JavaScript & PHP.",
 		"p-2": "Meine Leidenschaft für Webentwicklung begann mit einer einfachen HTML & CSS Seite, als ich sah, wie sich merkwürdige Wörter in echte Dinge verwandelten. Seitdem konnte ich nicht mehr aufhören.",
 		"p-3": "Mit der Zeit habe ich mich stark auf das React.js-Ökosystem konzentriert. Jetzt spezialisiere ich mich auf moderne Anwendungen mit Next.js oder dem MERN Stack.",
@@ -30,23 +33,29 @@
 		"button-resume": "CV herunterladen",
 		"button-blog": "Meinen Blog ansehen"
 	},
-	"projects": {
-		"heading-1": "Meine Projekte",
-		"heading-2": "Meine neuesten Projekte",
-		"p-1": "Ich programmiere seit 2 Jahren und habe an vielen Projekten gearbeitet. Hier sind einige der neuesten – für mehr Infos besuche mein GitHub-Profil.",
-		"p-2": "Entdecke einige meiner Projekte. Für weitere Details besuche mein GitHub-Profil.",
-		"above-button-1": "Mehr Projekte bald verfügbar!",
-		"above-button-2": "Willst du mehr sehen?",
-		"button-1": "Alle Projekte ansehen",
-		"button-2": "GitHub-Profil",
-		"button-visit": "Website besuchen",
-		"button-frontend": "Frontend-Repo",
-		"button-backend": "Backend-Repo",
-		"date": "Jetzt",
-		"test-account": "Testkonto",
-		"email": "E-Mail: ",
-		"password": "Passwort: "
-	},
+    "projects": {
+        "heading-1": "Meine Projekte",
+        "heading-2": "Meine neuesten Projekte",
+        "p-1": "Ich programmiere seit 2 Jahren und habe an vielen Projekten gearbeitet. Hier sind einige meiner neuesten. Für mehr Details besuche bitte mein GitHub-Profil.",
+        "p-2": "Erkunde einige meiner Projekte. Für mehr Informationen, besuche mein GitHub-Profil.",
+        "uptask-title": "UpTask – MERN Aufgaben- und Projektmanager",
+        "uptask-description": "UpTask ist eine umfassende Webanwendung zur Aufgaben- und Projektverwaltung mit dem MERN-Stack. Sie ermöglicht Teammanagement, Aufgabenverteilung und Fortschrittsverfolgung mit rollenbasiertem Zugriff, JWT-Authentifizierung und einer reaktionsschnellen Benutzeroberfläche.",
+        "nextcrm-title": "NextCRM – Kunden- und Lagerverwaltungssystem",
+        "nextcrm-description": "NextCRM ist eine moderne App zur Verwaltung von Kunden und Inventar mit integrierter Analyse, Echtzeit-Updates und sicherer JWT-Authentifizierung. Alles in einer modernen Oberfläche mit hellem und dunklem Modus.",
+        "portalspt-title": "Portal SPT – Private B2B-Partnerplattform",
+        "portalspt-description": "Portal SPT ist eine sichere B2B-Webanwendung mit JWT-Authentifizierung und Integration der Bsale-API. Sie ermöglicht Partnern die Produktsuche per SKU, das Aufgeben von Bestellungen, Profilverwaltung und Zugriff auf exklusive Rabatte.",
+        "above-button-1": "Weitere Projekte folgen bald!!!",
+        "above-button-2": "Möchtest du mehr sehen?",
+        "button-1": "Alle Projekte ansehen",
+        "button-2": "GitHub-Profil",
+        "button-visit": "Website besuchen",
+        "button-frontend": "Frontend-Repo",
+        "button-backend": "Backend-Repo",
+        "date": "Jetzt",
+        "test-account": "Testkonto",
+        "email": "E-Mail: ",
+        "password": "Passwort: "
+    },
 	"experiences": {
 		"above-heading": "Erfahrungen",
 		"heading": "Meilensteine",
